Adding a slide bass

--- a/config/base.cfg
+++ b/config/base.cfg
@@ -1,4 +1,4 @@
-scale: major
-#harmony_type: multibridge
-#rhythm_type: atonal
+scale: harmonicMinor
+harmony_type: multibridge
+rhythm_type: atonal
 melody_structure: abcbcbf
