Adding arpeggio capability to harmony

--- a/config/base.cfg
+++ b/config/base.cfg
@@ -1,4 +1,4 @@
-scale: harmonicMinor
-harmony_type: multibridge
 rhythm_type: atonal
 melody_structure: abcbcbf
+melody_type: piecewise
+harmony_type: discrete_chord
