More work, but bass (slide) and harmony (combo) have apparent issues. Rhythm needs re-addressing as well

--- a/config/base.cfg
+++ b/config/base.cfg
@@ -1,4 +1,6 @@
-rhythm_type: atonal
-melody_structure: abcbcbf
-melody_type: piecewise
-harmony_type: discrete_chord
+instrument_melody: 0
+instrument_harmony: 0
+instrument_bass: 0
+harmony_type: combo
+rhythm_type: tonal
+bass_type: pulse
