--- a/config/base.cfg
+++ b/config/base.cfg
@@ -1,6 +1,6 @@
 instrument_melody: 0
 instrument_harmony: 0
 instrument_bass: 0
-harmony_type: combo
-rhythm_type: tonal
-bass_type: pulse
+harmony_type: discrete_chord
+rhythm_type: none
+bass_type: oompah
